<resources>
    <string name="app_name">Day3</string>
    <string name="grade_calculator">Grade Calculator</string>
    <string name="name">Name</string>
    <string name="calculate">Calculate</string>
    <string name="final_30">Final %30</string>
    <string name="mid_terms_30">Mid terms %30</string>
    <string name="homework_25">Homework %25</string>
    <string name="quizes_15">Quizes %15</string>
    <string name="reset">Reset</string>
    <string name="result_here">Result Here!</string>

</resources>