<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="417dp"
        android:background="#000000"
        android:fontFamily="sans-serif-black"
        android:text="@string/result_here"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/reset"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="559dp"
        android:layout_marginEnd="131dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="casual"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp"
        android:background="#000000"
        android:fontFamily="serif"
        android:text="@string/grade_calculator"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/Quiz"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="106dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/quizes_15"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Homework"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="174dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/homework_25"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Midterms"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="241dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/mid_terms_30"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Final"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="309dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/final_30"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="485dp"
        android:layout_marginEnd="69dp"
        android:background="@drawable/round2"
        android:fontFamily="casual"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>